<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">nope.</string>
    <string name="select_items">Choose items</string>
    <string name="empty_list">No numbers blocked</string>
    <string name="delete">Delete</string>
    <string name="action_settings">Settings</string>
    <string name="never_contacted">Never</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_icon_desc">Menu Item Icon</string>
    <string name="item_icon_desc">Item Icon</string>
    <string name="add_block_entry">Add Number</string>
    <string name="spam_block_toggle">Toggle spam blocking</string>
    <string name="delete_entry">Delete Selected Item</string>
    <string name="drawer_open">This button opens the navigation drawer.</string>
    <string name="drawer_close">This button will closed the navigation drawer.</string>
    <string name="spam_block_on">You are currently being protected from text spam. To configure this feature, visit the Settings menu.</string>
    <string name="spam_block_off">Text spam blocking is currently turned off.</string>
    
    <!-- Strings for block fragments -->
    <string name="dialog_add_call_block_title">Add Call Block</string>
    <string name="dialog_add_text_block_title">Add Text Block</string>
    <string name="dialog_add_block_message">Please enter a valid phone number below. This includes area codes.</string>
    <string name="dialog_delete_call_block_title">Delete Call Block?</string>
    <string name="dialog_delete_text_block_title">Delete Text Block?</string>
    <string name="dialog_delete_block_message">This block item will be deleted.</string>

    <!-- Strings for the preferences fragment -->
    <string name="pref_call_block_title">Call Block</string>
    <string name="pref_title_call_blocking_service">Call Blocking</string>
    <string name="pref_summary_call_blocking_service">Call blocking toggle switch. Turn on if you want to block calls from your list.</string>
    <string name="pref_title_call_block_method">Blocking Method</string>
    <string name="pref_summary_call_block_method">This setting is to choose which call blocking method to use.</string>
    <string name="pref_blocking_method_one">callBlockMethodOne</string>
    <string name="pref_blocking_method_two">callBlockMethodTwo</string>
    <string name="pref_blocking_method_three">callBlockMethodThree</string>
    <string name="pref_blocking_method_four">callBlockMethodFour</string>
    <string name="pref_text_block_title">Text Block</string>
    <string name="pref_title_text_blocking_service">Text Blocking</string>
    <string name="pref_summary_text_blocking_service">Text blocking toggle switch. Turn on if you want to block texts from your list.</string>
    <string name="pref_title_spam_block_consecutive">Text Block Threshold</string>
    <string name="pref_spam_block_title">Spam Block</string>
    <string name="pref_title_spam_blocking_service">Spam Blocking</string>
    <string name="pref_summary_spam_blocking_service">Spam blocking toggle switch. Turn on if you want to block text message spam.</string>
    <string name="pref_summary_spam_block_consecutive">The number of consecutive texts from the same number you can receive before the blocker considers it spam, and starts blocking that number.</string>

    <!-- Strings for the about fragment -->
    <string name="about_title">nope.</string>
    <string name="about_text">The goal of nope. was to create a comprehensive blocking application that was well designed, simple, and easy to use &#8212; with features that worked. We hope you like it.</string>
    <string name="catergory_developer">DEVELOPER</string>
    <string name="rate_app_key">rateApp</string>
    <string name="rate_app_title">Rate app</string>
    <string name="contact_dev_key">contactDev</string>
    <string name="contact_dev_title">Contact developer</string>
    <string name="developer_email">justin@heliopausedev.com</string>
    <string name="report_bug_key">reportBug</string>
    <string name="report_bug_title">Report bug</string>
    <string name="report_bug_url">https://github.com/justinharrison/Nope/issues</string>
    <string name="license_key">licenses</string>
    <string name="license_title">Open source licenses</string>
    <string name="version_key">version</string>
    <string name="version_title">nope. version</string>
    
    <!-- Licensing strings -->
    <string name="license_dialog_message_not_licensed">This application is not licensed. Please purchase it from Google Play</string>
    <string name="license_dialog_title_not_licensed">Application Not Licensed</string>

</resources>