<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="pref_key_call_block_settings"
        android:title="@string/pref_call_block_title" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_call_block_service_state"
            android:summary="@string/pref_summary_call_blocking_service"
            android:title="@string/pref_title_call_blocking_service" />

        <ListPreference
            android:defaultValue="@string/pref_blocking_method_one"
            android:dependency="pref_key_call_block_service_state"
            android:entries="@array/pref_call_block_method_entries"
            android:entryValues="@array/pref_call_block_method_values"
            android:key="pref_key_call_block_method"
            android:summary="@string/pref_summary_call_block_method"
            android:title="@string/pref_title_call_block_method" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_key_text_block_settings"
        android:title="@string/pref_text_block_title" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_text_block_service_state"
            android:summary="@string/pref_summary_text_blocking_service"
            android:title="@string/pref_title_text_blocking_service" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_key_spam_block_settings"
        android:title="@string/pref_spam_block_title" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_spam_block_service_state"
            android:summary="@string/pref_summary_spam_blocking_service"
            android:title="@string/pref_title_spam_blocking_service" />

    </PreferenceCategory>

</PreferenceScreen>